deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-prod-deployment
  namespace: prod
  labels:
    stage: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-website
        image: umarayaz96/staticfrontendsite
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
