clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    env: prod
  ports:
  - port: 80
    targetPort: 80
