nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: frontend

  ports:
  - nodePort: 30080
    port: 80
    targetPort: 80
