ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "slicksite.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: frontend-service
          port:
            number: 80
